# fractal

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO  meson.build  meson_options.txt
.gitlab/issue_templates/: Bug.md
data/resources/: resources.gresource.xml
data/resources/ui/: sidebar-account-switcher-item.ui  sidebar-account-switcher.ui  sidebar.ui
flatpak/: org.gnome.Fractal-release.json  org.gnome.Fractal.json
fractal-api/src/: util.rs
fractal-api/src/backend/: directory.rs  mod.rs  sync.rs  types.rs  user.rs
fractal-api/src/model/: message.rs
fractal-gtk/: Cargo.toml
fractal-gtk/po/: POTFILES.in  fr.po
fractal-gtk/res/: Info.plist.in  app.css  main_window.glade  meson.build  org.gnome.Fractal.appdata.xml.in  org.gnome.Fractal.appdata.xml.in.in  org.gnome.Fractal.gschema.xml  org.gnome.Fractal.metainfo.xml.in.in  resources.xml
fractal-gtk/res/icons/: meson.build
fractal-gtk/res/ui/: #main_window.ui#  account.ui  account_settings.ui  invite.ui  kicked_room.ui  login_flow.ui  main_window.ui  media_viewer.ui  media_viewer_menu.ui  message_menu.ui  password_dialog.ui  server_chooser_menu.ui
fractal-gtk/src/: app.rs  cache.rs  error.rs  globals.rs  main.rs  passwd.rs  row_data.rs  store.rs  uibuilder.rs  uitypes.rs  util.rs
fractal-gtk/src/actions/: account_settings.rs  global.rs  media_viewer.rs  message.rs  mod.rs  room_history.rs  room_settings.rs
fractal-gtk/src/app/: appop_loop.rs  backend_loop.rs  mod.rs  windowstate.rs
fractal-gtk/src/app/connect/: account.rs  column.rs  direct.rs  directory.rs  emoji.rs  headerbar.rs  invite.rs  join_room.rs  kicked_room.rs  language.rs  leave_room.rs  markdown.rs  media_viewer.rs  mod.rs  new_room.rs  roomlist_search.rs  scroll.rs  send.rs  spellcheck.rs
fractal-gtk/src/appop/: account.rs  attach.rs  directory.rs  invite.rs  login.rs  media_viewer.rs  member.rs  message.rs  mod.rs  notifications.rs  notify.rs  room.rs  room_settings.rs  start_chat.rs  state.rs  stickers.rs  sync.rs  user.rs
fractal-gtk/src/backend/: directory.rs  media.rs  mod.rs  register.rs  room.rs  sync.rs  user.rs
fractal-gtk/src/cache/: mod.rs  state.rs
fractal-gtk/src/model/: member.rs  room.rs
fractal-gtk/src/store/: mod.rs  sidebar.rs
fractal-gtk/src/views/: mod.rs
fractal-gtk/src/widgets/: account.rs  address.rs  autocomplete.rs  avatar.rs  divider.rs  file_chooser.rs  file_dialog.rs  image.rs  inline_player.rs  kicked_dialog.rs  login.rs  media_viewer.rs  member.rs  members_list.rs  message.rs  message_menu.rs  mod.rs  room.rs  room_history.rs  room_settings.rs  roomlist.rs  roomrow.rs  scroll_widget.rs  sidebar.rs  source_viewer.rs  sourceview_entry.rs
fractal-mac-wrapper/: Cargo.toml
fractal-mac-wrapper/src/: main.rs
fractal-matrix-api/: Cargo.toml
fractal-matrix-api/src/: cache.rs  client.rs  error.rs  globals.rs  lib.rs  meson.build  r0.rs  serde.rs  types.rs  util.rs
fractal-matrix-api/src/backend/: directory.rs  media.rs  mod.rs  register.rs  room.rs  stickers.rs  sync.rs  types.rs  user.rs
fractal-matrix-api/src/model/: event.rs  fileinfo.rs  member.rs  message.rs  mod.rs  protocol.rs  register.rs  room.rs  stickers.rs
fractal-matrix-api/src/r0/: filter.rs  typing.rs
fractal-matrix-api/src/r0/account/: change_password.rs  deactivate.rs  login.rs  logout.rs  register.rs
fractal-matrix-api/src/r0/contact/: create.rs  delete.rs  get_identifiers.rs  request_verification_token_email.rs  request_verification_token_msisdn.rs
fractal-matrix-api/src/r0/directory/: post_public_rooms.rs
fractal-matrix-api/src/r0/media/: create.rs  get_content.rs  get_content_thumbnail.rs
fractal-matrix-api/src/r0/membership/: invite_user.rs  join_room_by_id_or_alias.rs  leave_room.rs
fractal-matrix-api/src/r0/message/: create_message_event.rs
fractal-matrix-api/src/r0/profile/: get_display_name.rs  get_profile.rs  set_avatar_url.rs  set_display_name.rs
fractal-matrix-api/src/r0/read_marker/: set_read_marker.rs
fractal-matrix-api/src/r0/search/: user.rs
fractal-matrix-api/src/r0/server/: domain_info.rs
fractal-matrix-api/src/r0/sync/: get_joined_members.rs  sync_events.rs
fractal-matrix-api/src/r0/tag/: create_tag.rs  delete_tag.rs
hooks/: pre-commit.hook
scripts/: build-mac.sh  cargo.sh  create-mac-bundle.sh  meson_post_inst.sh
src/: app.rs  application.rs  backend.rs  meson.build  util.rs  window.rs
src/model/: member.rs  room.rs
src/session/: mod.rs
src/session/sidebar/: account_switcher.rs  mod.rs  sidebar.rs
src/widgets/: message.rs  room.rs
