[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
build = "build.rs"
name = "fractal-gtk"
version = "4.0.0"
workspace = "../"
edition = "2018"

[dependencies]
comrak = "0.4.0"
dirs = "1.0.4"
failure = "0.1.3"
fractal-matrix-api = { path = "../fractal-matrix-api" }
fragile = "0.3.0"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
gdk-pixbuf-sys = "0.7.0"
gio = "0.5.1"
glib = "0.6.1"
gstreamer = "0.12.2"
gstreamer-player = "0.12.2"
html2pango = { git = "https://gitlab.gnome.org/World/html2pango" }
itertools = "0.8.0"
lazy_static = "1.2.0"
letter-avatar = "1.0.2"
libhandy = { git = "https://gitlab.gnome.org/jsparber/libhandy-rs" }
log = "0.4.6"
mdl = "1.0.4"
pango = "0.5.0"
pangocairo = "0.6.0"
rand = "0.6.1"
regex = "1.1.0"
secret-service = "0.4.0"
serde_json = "1.0.33"
sourceview = "0.5.0"
tree_magic = "0.2.1"
url = "1.7.2"

[dependencies.cairo-rs]
features = ["png"]
version = "0.5.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.gettext-rs]
git = "https://github.com/danigm/gettext-rs"
branch = "no-gettext"
features = ["gettext-system"]

[dependencies.gtk]
features = ["v3_22"]
version = "0.5.0"

[dependencies.serde]
version = "1.0.82"
features = ["derive"]
