[package]
authors = ["Daniel Garcia <danigm@wadobo.com>"]
name = "fractal-matrix-api"
version = "4.0.0"
workspace = "../"
edition = "2018"

description = """
Library to communicate with a Matrix.org server
"""
keywords = [
    "matrix", "fractal"
]
license = "GPL-3.0"
repository = "https://gitlab.gnome.org/World/fractal"
documentation = "https://world.pages.gitlab.gnome.org/fractal/fractal_matrix_api/index.html"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
directories = "1.0.2"
log = "0.4.6"
md5 = "0.6.1"
regex = "1.1.0"
reqwest = "0.9.5"
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
time = "0.1.41"
tree_magic = "0.2.1"
url = "1.7.2"
urlencoding = "1.0.0"
