hicolor_dir = join_paths('hicolor', 'scalable', 'apps')

install_data(
  join_paths(hicolor_dir, 'org.gnome.Fractal.svg'),
  install_dir: join_paths(datadir, 'icons', hicolor_dir),
  rename: '@0@.svg'.format(application_id)
)

hicolor_dir = join_paths('hicolor', 'symbolic', 'apps')

install_data(
  join_paths(hicolor_dir, 'org.gnome.Fractal-symbolic.svg'),
  install_dir: join_paths(datadir, 'icons', hicolor_dir),
  rename: '@0@-symbolic.svg'.format(application_id)
)
